--- a/PioneerPlan/Base.lproj/Main.storyboard
+++ b/PioneerPlan/Base.lproj/Main.storyboard
@@ -157,10 +157,10 @@
             </objects>
             <point key="canvasLocation" x="602.89855072463774" y="137.94642857142856"/>
         </scene>
-        <!--View Controller-->
+        <!--Clubs View Controller-->
         <scene sceneID="dxN-xo-DsD">
             <objects>
-                <viewController id="9O9-Q4-Pqb" customClass="ViewController" customModule="PioneerPlan" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9O9-Q4-Pqb" customClass="clubsViewController" customModule="PioneerPlan" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e1q-jL-dNb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -174,10 +174,16 @@
                                     </barButtonItem>
                                     <barButtonItem title="Quiz" image="pencil.and.ellipsis.rectangle" catalog="system" id="74P-Gr-oKt">
                                         <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <segue destination="7J9-ZE-aVf" kind="show" id="OhH-2g-x8a"/>
+                                        </connections>
                                     </barButtonItem>
                                     <barButtonItem title="       " id="8gu-rx-6Cu"/>
                                     <barButtonItem image="calendar" catalog="system" id="mUA-sI-2of">
                                         <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <segue destination="ffm-gI-AUS" kind="show" id="rqD-9w-wb8"/>
+                                        </connections>
                                     </barButtonItem>
                                     <barButtonItem title="       " id="n2e-nx-jMI"/>
                                     <barButtonItem image="person.fill" catalog="system" id="NwF-Lo-HBb">
@@ -324,7 +330,162 @@
             </objects>
             <point key="canvasLocation" x="-65.217391304347828" y="-522.32142857142856"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="VMp-HD-2zB">
+            <objects>
+                <viewController id="m5g-6d-2NX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vF1-Kz-6Xf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.95285063979999995" green="0.95300656559999997" blue="0.95281738039999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="RPx-88-1A3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="sRw-i9-Usz"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Cf-1J-toV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1640" y="-520"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="uvf-0a-KGL">
+            <objects>
+                <viewController id="BdS-l7-4cY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="isf-hR-sgD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.95285063979999995" green="0.95300656559999997" blue="0.95281738039999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="e1p-w4-dwL"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eQy-nO-6eU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2436" y="-520"/>
+        </scene>
+        <!--Quizzes View Controller-->
+        <scene sceneID="EZB-Ae-JXd">
+            <objects>
+                <viewController id="7J9-ZE-aVf" customClass="quizzesViewController" customModule="PioneerPlan" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DD9-rT-UYQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2aU-Zy-B6o">
+                                <rect key="frame" x="0.0" y="755" width="414" height="49"/>
+                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <items>
+                                    <barButtonItem title="     " id="K7g-cU-ia9">
+                                        <color key="tintColor" red="1" green="0.84659177210000003" blue="0.92974461129999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem title="Quiz" image="pencil.and.ellipsis.rectangle" catalog="system" id="quY-th-wWL">
+                                        <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem title="       " id="Lvx-KY-jQN"/>
+                                    <barButtonItem image="calendar" catalog="system" id="vAu-ET-ZMZ">
+                                        <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem title="       " id="Tm8-ui-6Ey"/>
+                                    <barButtonItem image="person.fill" catalog="system" id="raQ-wL-UaR">
+                                        <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem title="       " id="Vgj-vF-a7g"/>
+                                    <barButtonItem id="BZG-ay-iIh"/>
+                                    <barButtonItem image="paperplane.fill" catalog="system" id="la5-Ca-tIT">
+                                        <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </barButtonItem>
+                                </items>
+                                <color key="tintColor" red="0.9647318721" green="0.96883779759999999" blue="0.949015677" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="barTintColor" systemColor="tertiarySystemBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="quizzes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TJa-67-uKd">
+                                <rect key="frame" x="48" y="799" width="53" height="19"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="calender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcq-dm-Llp">
+                                <rect key="frame" x="137" y="799" width="60" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="myPioneer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Co-AR-L4z">
+                                <rect key="frame" x="215" y="799" width="73" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="clubs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8FK-ft-4Fz">
+                                <rect key="frame" x="318" y="800" width="37" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quizzes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONk-Ge-WoR">
+                                <rect key="frame" x="87" y="42" width="241" height="106"/>
+                                <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="100"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QnS-7W-Dar">
+                                <rect key="frame" x="138" y="387" width="125" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.8148136735" green="0.33978074790000001" blue="0.25601023439999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XM1-ll-uIC">
+                                <rect key="frame" x="90" y="213" width="221" height="88"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="Clubs Quiz">
+                                    <color key="titleColor" red="0.8148136735" green="0.33978074790000001" blue="0.25601023439999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="m5g-6d-2NX" kind="show" id="qTH-Ah-qNi"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95294767619999998" green="0.95292979479999995" blue="0.95294183489999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="8FK-ft-4Fz" secondAttribute="bottom" constant="25" id="0wI-pd-7hO"/>
+                            <constraint firstAttribute="bottom" secondItem="wcq-dm-Llp" secondAttribute="bottom" constant="25" id="7LS-Ax-KuX"/>
+                            <constraint firstItem="8FK-ft-4Fz" firstAttribute="leading" secondItem="CFU-jM-bcd" secondAttribute="leading" constant="318" id="A6f-hJ-hhG"/>
+                            <constraint firstItem="TJa-67-uKd" firstAttribute="leading" secondItem="CFU-jM-bcd" secondAttribute="leading" constant="48" id="B5g-fm-vzT"/>
+                            <constraint firstItem="wcq-dm-Llp" firstAttribute="top" secondItem="CFU-jM-bcd" secondAttribute="top" constant="799" id="Cd3-v0-He6"/>
+                            <constraint firstItem="wcq-dm-Llp" firstAttribute="leading" secondItem="CFU-jM-bcd" secondAttribute="leading" constant="137" id="FKT-mo-gpJ"/>
+                            <constraint firstItem="ONk-Ge-WoR" firstAttribute="leading" secondItem="CFU-jM-bcd" secondAttribute="leading" constant="87" id="GA3-Mw-ugo"/>
+                            <constraint firstAttribute="bottom" secondItem="TJa-67-uKd" secondAttribute="bottom" constant="24" id="Jpi-4f-thF"/>
+                            <constraint firstItem="TJa-67-uKd" firstAttribute="top" secondItem="CFU-jM-bcd" secondAttribute="top" constant="799" id="MFr-Yp-5sE"/>
+                            <constraint firstItem="2aU-Zy-B6o" firstAttribute="leading" secondItem="CFU-jM-bcd" secondAttribute="leading" id="OSB-zs-QQI"/>
+                            <constraint firstItem="CFU-jM-bcd" firstAttribute="trailing" secondItem="5Co-AR-L4z" secondAttribute="trailing" constant="126" id="QgK-TY-SKf"/>
+                            <constraint firstItem="CFU-jM-bcd" firstAttribute="bottom" secondItem="ONk-Ge-WoR" secondAttribute="bottom" constant="660" id="TOT-Cr-T8g"/>
+                            <constraint firstItem="2aU-Zy-B6o" firstAttribute="top" secondItem="CFU-jM-bcd" secondAttribute="top" constant="755" id="VgU-Ho-k5O"/>
+                            <constraint firstItem="8FK-ft-4Fz" firstAttribute="top" secondItem="CFU-jM-bcd" secondAttribute="top" constant="800" id="akX-cr-nun"/>
+                            <constraint firstAttribute="bottom" secondItem="5Co-AR-L4z" secondAttribute="bottom" constant="25" id="bhh-mV-YgQ"/>
+                            <constraint firstItem="CFU-jM-bcd" firstAttribute="trailing" secondItem="8FK-ft-4Fz" secondAttribute="trailing" constant="59" id="dY2-7m-MPP"/>
+                            <constraint firstItem="CFU-jM-bcd" firstAttribute="trailing" secondItem="ONk-Ge-WoR" secondAttribute="trailing" constant="86" id="gFj-Jl-Er2"/>
+                            <constraint firstItem="5Co-AR-L4z" firstAttribute="top" secondItem="CFU-jM-bcd" secondAttribute="top" constant="799" id="hxT-GL-4Tq"/>
+                            <constraint firstItem="5Co-AR-L4z" firstAttribute="leading" secondItem="CFU-jM-bcd" secondAttribute="leading" constant="215" id="kXn-Bs-gEB"/>
+                            <constraint firstItem="CFU-jM-bcd" firstAttribute="trailing" secondItem="TJa-67-uKd" secondAttribute="trailing" constant="313" id="mi9-jG-not"/>
+                            <constraint firstItem="CFU-jM-bcd" firstAttribute="trailing" secondItem="wcq-dm-Llp" secondAttribute="trailing" constant="217" id="nch-mf-y8h"/>
+                            <constraint firstItem="ONk-Ge-WoR" firstAttribute="top" secondItem="CFU-jM-bcd" secondAttribute="top" constant="42" id="nr4-eN-q1j"/>
+                            <constraint firstItem="CFU-jM-bcd" firstAttribute="bottom" secondItem="2aU-Zy-B6o" secondAttribute="bottom" constant="4" id="qhs-yA-cka"/>
+                            <constraint firstItem="2aU-Zy-B6o" firstAttribute="trailing" secondItem="CFU-jM-bcd" secondAttribute="trailing" id="z6i-V8-H12"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CFU-jM-bcd"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="lAN-mK-ftU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vvF-ik-Pxw" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-826.08695652173924" y="-522.32142857142856"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="rqD-9w-wb8"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="IMG_0839" width="442" height="828"/>
         <image name="bubble.right" catalog="system" width="128" height="110"/>
